# note-templater

./: README.md  pyproject.toml
mknote/: cli.py
