[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mknote"
version = "0.1.0"
description = "A tool to create daily notes for projects."
authors = [
    { name = "Igor Udot", email = "horw7001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip>=1.8.0",
    "requests>=2.25.0",
]

[project.scripts]
mknote = "mknote.cli:main"